js/babel-plugin-sprockets-commoner-internal/test/errors/nonexistant/options.js
var path = require('path');

module.exports = {
  error: "Cannot find module 'blablabla' from '" + __dirname + "'"
};
